crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__a_this_method_call.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:24
    retain v0
    v1 = const.int 1  ; int
    v2 = call T::a(this: v0, v1) ! bb1  ; int
    release v0
    return v2
  bb1:
    release v0
    propagate "m() at t.mwl:4"
}
