crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__a_try_gives_every_protected_call_its_own_landing_block.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @5:1-10:2
    ; stmt s1 @6:3-6:11
    v0 = class.desc T  ; classdesc
    v1 = call T::go(this: v0) ! bb3  ; void
    ; stmt s2 @7:3-7:15
    v2 = const.str "fine"  ; string
    helper.echo_str v2 ! bb4
    release v2
    jump bb2
  bb1:
    v3 = take.thrown  ; object
    v4 = instanceof v3, Throwable  ; bool
    branch v4 -> bb5 (e0), bb6 (e1)
  bb2:
    return
  bb3:
    catch -> bb1
  bb4:
    release v2
    catch -> bb1
  bb5:
    ; stmt s3 @9:3-9:20
    v5 = field.get v3, Throwable::message  ; string
    helper.echo_str v5 ! bb7
    release v3
    jump bb2
  bb6:
    throw v3 -> bb8
  bb7:
    release v3
    propagate "<script>() at t.mwl:9"
  bb8:
    propagate "<script>() at t.mwl:9"
}
