crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__an_abandoned_generator_resumes_into_the_finally_it_is_suspended_inside.snap
---
source: crates/mwl-ir/src/lower/tests.rs
expression: "print_program(&p, map.file(file))"
---
fn G::two(classdesc) -> object {
  bb0:
    safepoint
    v0 = param 0  ; classdesc
    v1 = new G::two$gen()  ; object
    v2 = const.int 0  ; int
    field.set v1, G::two$gen::gen#state, v2
    field.set v1, G::two$gen::gen#unwind, v2
    return v1
}

fn G::two$gen::advance(object) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = field.get v0, G::two$gen::gen#state  ; int
    switch v1 -> 0: bb1 (e2), 1: bb5 (e3), 2: bb12 (e4), default: bb2 (e5)
  bb1:
    ; stmt s0 @4:5-8:6
    ; stmt s1 @5:7-5:15
    v2 = const.int 1  ; int
    field.set v0, G::two$gen::gen#current, v2
    v3 = const.int 1  ; int
    field.set v0, G::two$gen::gen#state, v3
    release v0
    v4 = const.bool true  ; bool
    return v4
  bb2:
    v19 = const.bool false  ; bool
    release v0
    return v19
  bb3:
    v12 = take.thrown  ; object
    ; stmt s4 @7:7-7:22
    v13 = const.str "closing"  ; string
    helper.echo_str v13 ! bb10
    release v13
    throw v12 -> bb11
  bb4:
    ; stmt s5 @9:5-9:13
    v14 = const.int 2  ; int
    field.set v0, G::two$gen::gen#current, v14
    v15 = const.int 2  ; int
    field.set v0, G::two$gen::gen#state, v15
    release v0
    v16 = const.bool true  ; bool
    return v16
  bb5:
    v5 = field.get v0, G::two$gen::gen#unwind  ; int
    v6 = const.int 0  ; int
    v7 = ne v5, v6  ; bool
    branch v7 -> bb6 (e0), bb7 (e1)
  bb6:
    ; stmt s2 @7:7-7:22
    v8 = const.str "closing"  ; string
    helper.echo_str v8 ! bb8
    release v8
    v9 = const.int -1  ; int
    field.set v0, G::two$gen::gen#state, v9
    release v0
    v10 = const.bool false  ; bool
    return v10
  bb7:
    ; stmt s3 @7:7-7:22
    v11 = const.str "closing"  ; string
    helper.echo_str v11 ! bb9
    release v11
    jump bb4
  bb8:
    release v8
    release v0
    propagate "G::two$gen::advance() at t.mwl:7"
  bb9:
    release v11
    release v0
    propagate "G::two$gen::advance() at t.mwl:7"
  bb10:
    release v13
    release v0
    propagate "G::two$gen::advance() at t.mwl:7"
  bb11:
    release v0
    propagate "G::two$gen::advance() at t.mwl:7"
  bb12:
    v17 = const.int -1  ; int
    field.set v0, G::two$gen::gen#state, v17
    release v0
    v18 = const.bool false  ; bool
    return v18
}

fn G::two$gen::current(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = field.get v0, G::two$gen::gen#current  ; int
    release v0
    return v1
}

fn G::two$gen::unwind(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = field.get v0, G::two$gen::gen#state  ; int
    v2 = const.int 0  ; int
    v3 = gt v1, v2  ; bool
    branch v3 -> bb1 (e0), bb2 (e1)
  bb1:
    v4 = const.int 1  ; int
    field.set v0, G::two$gen::gen#unwind, v4
    retain v0
    v5 = call G::two$gen::advance(this: v0)  ; bool
    return
  bb2:
    return
}

fn <script>() -> tagged {
  bb0:
    safepoint
    return
}

fn Throwable::constructor(object, string, tagged) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    retain v1
    field.set v0, Throwable::message, v1
    v2 = param 2  ; tagged
    retain v2
    field.set v0, Throwable::previous, v2
    v3 = array.new []  ; array
    field.set v0, Throwable::backtrace, v3
    v4 = const.str ""  ; string
    field.set v0, Throwable::location, v4
    release v1
    release v2
    release v0
    return
}

fn ParseError::constructor(object, string, tagged) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    retain v1
    field.set v0, ParseError::message, v1
    v2 = param 2  ; tagged
    retain v2
    field.set v0, ParseError::previous, v2
    v3 = array.new []  ; array
    field.set v0, ParseError::backtrace, v3
    v4 = const.str ""  ; string
    field.set v0, ParseError::location, v4
    v5 = array.new []  ; array
    field.set v0, ParseError::issues, v5
    release v1
    release v2
    release v0
    return
}
