crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__an_enum_case_lowers_to_a_constant_and_as_int_is_free.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @3:1-3:28
    v0 = const.int 2  ; enum:int
    v1 = reinterpret v0  ; int
    return
}
